--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -27,6 +27,40 @@ body{
   background: #4C5365; 
 }
 
+#logo_container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  top: 2%;
+  left: 0%;
+  margin: 0px;
+  padding: 0px;
+}
+
+#logo_icon:before {
+    font-family: FontAwesome;
+    font-size: 60pt;
+    padding: 10%;
+    content: '\f0c0';
+    border-radius: 50%;
+    height: 50%;
+    color: #4C5365;
+    background: white;
+    text-align: left;
+}
+
+#logo_name:before {
+  display:inline-block;
+  font-size: 26px;
+  height: 50%;
+  padding: 15%;
+  content: "group'em";
+  color: white;
+  border-bottom: 2px white;
+}
+
+
 /* Custom CSS Styles */
 #cssmenu {
   padding: 0;
