--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,9 +1,4 @@
-
-/* Please Keep this font import at the very top of any CSS file */
-@charset "UTF-8";
 /* Starter CSS for Flyout Menu */
-
-
 body{
   margin: 0;
   background: white; 
@@ -24,6 +19,7 @@ body{
   height: 100%;
   float: left;
   min-width: 200px;
+  max-width: 300px;
   background: #4C5365; 
 }
 
@@ -60,6 +56,14 @@ body{
   border-bottom: 2px white;
 }
 
+#link_to_table_view:before{
+  content: 'list students';
+}
+
+#link_to_group_view:before{
+  content: 'make groups';
+}
+
 
 /* Custom CSS Styles */
 #cssmenu {
@@ -73,6 +77,14 @@ body{
   font-family: 'Raleway';
   zoom: 1;
   font-size: 18px;
+}
+
+#cssmenu a {
+  display: block;
+  padding: 15px 20px;
+  color: #4C5365;
+  text-decoration: none;
+  text-transform: lowercase;
 }
 
 #cssmenu:before {
@@ -147,14 +159,6 @@ body{
 }
 #cssmenu ul ul li {
   font-weight: normal;
-}
-
-#cssmenu a {
-  display: block;
-  padding: 15px 20px;
-  color: #4C5365;
-  text-decoration: none;
-  text-transform: lowercase;
 }
 
 #cssmenu > ul > li > a {
