--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -41,7 +41,7 @@ body{
     content: '\f0c0';
     border-radius: 50%;
     height: 50%;
-    color: #4C5365;
+    color: #60BADF;
     background: white;
     text-align: left;
 }
