--- a/src/table-view.css
+++ b/src/table-view.css
@@ -221,8 +221,9 @@ table td p span:after {
 
 table th textarea {
     display:inline-block;
-    text-align: center;
-    vertical-align: middle;
+    /* text-align: center; */
+    /* vertical-align: middle; */
+    padding: 5px;
     border-radius: 10px;
     width: 100%;
     font: 18px Raleway;
