--- a/src/group-view.css
+++ b/src/group-view.css
@@ -49,13 +49,14 @@ svg line.breaking {
 /*shuffle button containers (for placement + sizing) */
 #control_container {
     margin: auto;
-    vertical-align: bottom;
+    /*vertical-align: bottom;*/
     width: 100%;
     height: 80px;
-    position: fixed;
+    position: absolute;
     bottom: 0%;
-    left: 50%;
-    margin-bottom: 5%;
+    margin-left: 0 auto;
+    text-align: center;
+    margin-bottom: 3%;
     padding: 0px;
     border: 0px;
 }
