--- a/src/table-view.css
+++ b/src/table-view.css
@@ -153,7 +153,7 @@ table td p {
 }
 
 table td p.ui-draggable-dragging {
-    box-shadow: 0 3px 11px black;
+    box-shadow: 0 3px 11px #939085;
     cursor: -webkit-grabbing;
     cursor: grabbing;
 }
@@ -189,7 +189,7 @@ table td p span:hover {
 }
 
 .tile_name:hover, .tile_name:nth-of-type(2) {
-    box-shadow: 0 3px 11px black;
+    box-shadow: 0 3px 11px #939085;
 }
 
 .tile_prefer {
@@ -237,7 +237,7 @@ table th textarea {
     display:inline-block;
     /* text-align: center; */
     /* vertical-align: middle; */
-    padding: 5px;
+    padding: 20px;
     border-radius: 10px;
     width: 100%;
     font: 18px Raleway;
@@ -259,7 +259,6 @@ table th:nth-of-type(3) th textarea {
 table th:nth-of-type(4) th textarea {
     height: 8ex;
 }
-
 
 /*CLASS NAME INPUT BOX*/ 
 #classname_row {
