--- a/src/table-view.css
+++ b/src/table-view.css
@@ -358,7 +358,7 @@ table th:nth-of-type(4) th textarea {
     pointer-events: all;
 }
 
-.control_button:focus, .control_button:active, .control_button:hover {
+.control_button:focus, .control_button:active {
     box-shadow: 0 0 5px #f9efec;
     padding: 0px;
     margin: 0px;
@@ -378,6 +378,12 @@ table th:nth-of-type(4) th textarea {
     opacity: 0.30;
     background-color: #4C5365;
     color: white;
+}
+
+#groupem_button:hover, .control_button:hover{
+    background-color: #F39354;
+    color: #F39354;
+    background: #FED587;
 }
 
 /*group_size*/
