--- a/src/group-view.css
+++ b/src/group-view.css
@@ -54,122 +54,128 @@ svg line.breaking {
 
 /*shuffle button containers (for placement + sizing) */
 #control_container {
-    margin: auto;
-    /*vertical-align: bottom;*/
-    width: 100%;
-    height: 80px;
-    position: absolute;
-    bottom: 0%;
-    margin-left: 0 auto;
-    text-align: center;
-    margin-bottom: 3%;
-    padding: 0px;
-    border: 0px;
+  margin: auto;
+  /*vertical-align: bottom;*/
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0%;
+  margin-left: 0 auto;
+  text-align: center;
+  margin-bottom: 3%;
+  padding: 0px;
+  border: 0px;
 }
 
 #button_container {
-    display:inline-block;
-    vertical-align: middle;
-    height: 95%;
+  display:inline-block;
+  vertical-align: middle;
+  height: 95%;
 }
 
 #group_size_container {
-    display:inline-block;
-    vertical-align: middle;
-    height: 95%;
+  display:inline-block;
+  vertical-align: middle;
+  height: 95%;
+  width: 80px;
+  border-radius: 5px;
+  border: 3px solid #BCBAB4;
+  font-size: 28px;
 }
 
 #increment_container {
-    display: inline-block;
-    width: 30px;
-    height: 100%;
-    vertical-align: middle;
+  display: inline-block;
+  width: 30px;
+  height: 100%;
+  vertical-align: middle;
 }
 
 #increase_button_container {
-    display: block;
-    height: 45%;
-    padding-top: 10%;
-    padding-bottom: 5%;
-    vertical-align: top;
+  display: block;
+  height: 45%;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  vertical-align: top;
 }
 
 #decrease_button_container{
-    display: block;
-    height: 45%;
-    padding-bottom: 10%;
-    padding-top: 5%;
-    vertical-align: bottom;
+  display: block;
+  height: 45%;
+  padding-bottom: 10%;
+  padding-top: 5%;
+  vertical-align: bottom;
 }
 
 /*shuffle button objects (for colors + behavior) */
 #shuffle_button {
-    text-align: center;
-    height: 100%;
-    width: 200px;
-    font: 28px Raleway;
-    background-color: #4C5365;
-    color: white;
-    border-radius: 5px;
-    border-width: 0px;
-    pointer-events: all;
+  text-align: center;
+  height: 100%;
+  width: 200px;
+  font: 28px Raleway;
+  background-color: #4C5365;
+  color: white;
+  border-radius: 5px;
+  border-width: 0px;
+  pointer-events: all;
 }
 
 
 .control_button:focus, .control_button:active {
-    box-shadow: 0 0 5px #f9efec;
-    padding: 0px;
-    margin: 0px;
-    outline: none;
+  box-shadow: 0 0 5px #f9efec;
+  padding: 0px;
+  margin: 0px;
+  outline: none;
+  color: #F39354;
+  background: #FED587;
 }
 
-#shuffle_button:hover .control_button:hover{
-    background-color: #F39354;
-    color: #F39354;
-    background: #FED587;
+#shuffle_button:hover, .control_button:hover{
+  background-color: #F39354;
+  color: #F39354;
+  background: #FED587;
 }
 
-/*group_size*/
+
 #group_size_input {
-    -webkit-transition: all 0.10s ease-in-out;
-    -moz-transition: all 0.10s ease-in-out;
-    -ms-transition: all 0.10s ease-in-out;
-    -o-transition: all 0.10s ease-in-out;
-    display: block;
-    font: 32px Raleway;
-    text-align: center;
-    position:relative;
-    width: 80px;
-    border-radius: 5px;
-    height:90%;
-    bottom: 0%;
-    background-color: white;
-    border: 3px solid #BCBAB4;
-    color: #4C5365;
-    outline: none;
+  -webkit-transition: all 0.10s ease-in-out;
+  -moz-transition: all 0.10s ease-in-out;
+  -ms-transition: all 0.10s ease-in-out;
+  -o-transition: all 0.10s ease-in-out;
+  font: 32px Raleway;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  height:100%;
+  bottom: 0%;
+  background-color: white;
+  color: #4C5365;
+  outline: none;
 }
 
 /*increments*/
 .increment_button {
-    display: block;
-    font-family: FontAwesome;
-    font-size: 20px;
-    border-radius: 5px;
-    background-color: #4C5365;
-    border-width: 0px;
-    border-color: white;
-    pointer-events: all;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    color: white;
+  display: block;
+  font-family: FontAwesome;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: #4C5365;
+  border-width: 0px;
+  border-color: white;
+  pointer-events: all;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
 #increase_group_size:before {
-    content: '\f067';
+  content: '\f067';
 }
 
 #decrease_group_size:before {
-    content: '\f068';
+  content: '\f068';
 }
 
