--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -73,12 +73,29 @@ body{
 }
 
 #link_to_table_view:before{
+  font-family: FontAwesome;
+  font-size: 18px;
+  content: '\f0ce\00a0\00a0';
+}
+
+#link_to_table_view:after{
+  font-size: 20px;
   content: 'list students';
 }
 
+
 #link_to_group_view:before{
+  font-family: FontAwesome;
+  font-size: 18px;
+  content: '\f0c0\00a0\00a0';
+}
+
+#link_to_group_view:after{
+  font-size: 20px;
   content: 'make groups';
 }
+
+
 
 
 /* Custom CSS Styles */
