--- a/src/table-view.css
+++ b/src/table-view.css
@@ -458,18 +458,18 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
 
 /*increments*/
 .increment_button {
-    display: block;
-    font-family: FontAwesome;
-    font-size: 20px;
-    border-radius: 5px;
-    background-color: #4C5365;
-    border-width: 0px;
-    border-color: white;
-    pointer-events: all;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    color: white;
+  display: block;
+  font-family: FontAwesome;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: #4C5365;
+  border-width: 0px;
+  border-color: white;
+  pointer-events: all;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
 #increase_group_size:before {
@@ -479,6 +479,11 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
 #decrease_group_size:before {
     content: '\f068';
 }
+
+/*.increment_button:after {
+    font-size: 18px;
+    content: '\f007';
+}*/
 
 /*FOCUS EFFECTS FOR TEXT INPUT ELEMENTS */
 input[type=text], textarea {
