--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -40,7 +40,7 @@ body{
   height: 100%;
   text-align: center;
   position: absolute;
-  top: 2%;
+  top: 5%;
   left: 0%;
   margin: 0px;
   padding: 0px;
@@ -65,11 +65,10 @@ body{
 #logo_name:before {
   display:inline-block;
   font-size: 26px;
-  height: 50%;
-  padding: 15%;
+  height: 20%;
+  margin-top: 15%;
   content: "group'em";
   color: white;
-  border-bottom: 2px white;
 }
 
 #link_to_table_view:before{
