--- a/src/table-view.css
+++ b/src/table-view.css
@@ -206,6 +206,7 @@ table td p span:hover {
     box-sizing: border-box;
 }
 
+
 .tile_name:hover, .tile_name:nth-of-type(2) {
     box-shadow: 0 3px 11px #939085;
 }
@@ -404,14 +405,22 @@ table th:nth-of-type(4) th textarea {
 }
 
 
-/*#group_size_icon {
+.group_size_icon_container {
+    width: 100%;
+    font-family: FontAwesome;
+
+
+.group_size_icon {
+    font-family: FontAwesome;
     display: inline-block;
-    text-align: right;
-    width: 45%;
+    text-align: center;
+    width: 100%;
+    height: 100%;
     position: relative;
     padding-right: 5px;
     padding-top: 0.5em;
-}*/
+}
+
 
 /*#group_size_icon:before{
     content:'\f235';
@@ -440,6 +449,17 @@ table th:nth-of-type(4) th textarea {
     color: #4C5365;
     outline: none;
 }
+
+}
+
+
+#group_size_icon_4x {
+    width: 100%;
+    padding: 0px;
+    text-align: center;
+    vertical-align:top;
+}
+
 
 /*if we want to allow for text input into group size*/
 /*input[type=number]:{ 
