--- a/src/table-view.css
+++ b/src/table-view.css
@@ -26,6 +26,11 @@ body, html {
   height: 100%;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 table {
     margin: auto;
     width: 80%;
