--- a/src/group-view.css
+++ b/src/group-view.css
@@ -26,22 +26,22 @@ html, body, body > svg, body > div {
  font-family: 'Raleway';
 }
 
- body > div {
-   pointer-events: none;
- }
+body > div {
+  pointer-events: none;
+}
 
- svg circle, svg g text {
-   cursor: move;
-   cursor: -webkit-grab;
- }
+svg circle, svg g text {
+  cursor: move;
+  cursor: -webkit-grab;
+}
 
- svg g.node text {
-  fill: white;
-  font-family: Raleway;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+svg g.node text {
+ fill: white;
+ font-family: Raleway;
+ -webkit-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
 }
 
 svg g.node circle {
@@ -57,6 +57,11 @@ svg line.link {
  stroke: #EFEDE7;
  stroke-width: 75px;
  stroke-linecap: round;
+}
+
+/* Provisional selection color for the selected cluster. */
+svg line.link.clustersel {
+ stroke: #DFDDE7;
 }
 
 svg line.join {
