--- a/src/table-view.css
+++ b/src/table-view.css
@@ -20,7 +20,7 @@
  *
  */
 
- body, html {
+body, html {
   font: 28px;
   font-family: 'Raleway', sans-serif;
   width: 100%;
@@ -30,6 +30,11 @@
 .container {
   width: 100%;
   height: 100%;
+}
+
+.emptyclassroom #button_row,
+.emptyclassroom .heading_row {
+  opacity: 0.1;
 }
 
 table {
@@ -269,7 +274,7 @@ table td p span:after {
     border-radius: 10px;
 }
 
-table th textarea {
+#add_student_box {
     display:inline-block;
     /* text-align: center; */
     /* vertical-align: middle; */
@@ -279,6 +284,10 @@ table th textarea {
     font: 18px Raleway;
     height: 5em;
     resize: none;
+}
+
+.emptyclassroom #add_student_box {
+    height: 20em;
 }
 
 /* Make the textarea larger when it's the only thing. */
