--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -35,7 +35,7 @@ body{
   width: 10%;
   height: 100%;
   float: left;
-  min-width: 200px;
+  min-width: 230px;
   max-width: 300px;
   background: #4C5365; 
 }
@@ -110,7 +110,7 @@ body{
   border: 0;
   line-height: 1;
   pointer-events: all; 
-  width: 200px;
+  width: 230px;
   background: #4C5365; 
   font-family: 'Raleway';
   zoom: 1;
@@ -142,7 +142,7 @@ body{
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 230px;
 }
 
 #cssmenu ul {
@@ -175,7 +175,7 @@ body{
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
   border-radius: 0 3px 3px 0;
-  width: 200px;
+  width: 230px;
   border: 1px solid #0082e7;
 }
 
@@ -185,6 +185,9 @@ body{
 #cssmenu ul ul ul {
   top: -2px;
   right: 0;
+}
+#teachermode_text {
+  padding-right: 5%;
 }
 #cssmenu ul li:hover > ul {
   visibility: visible;
