--- a/src/table-view.css
+++ b/src/table-view.css
@@ -27,6 +27,10 @@ body, html {
   height: 100%;
 }
 
+#walkthrough-content {
+    display: none;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -575,7 +579,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       outline: none;
       padding: 3px 0px 3px 3px;
       margin: 5px 1px 3px 0px;
-      border: 3px dashed #BCBAB4;
+      border: 3px solid #BCBAB4;
       vertical-align: middle;
   }
 
@@ -597,7 +601,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       /*border: 3px solid #CC99FF;*/
       border: none;
       box-shadow: 0 0 5px #BCBAB4;
-      background: #f9efec;
+      background: white;
       position: relative;
   }
 
