--- a/src/table-view.css
+++ b/src/table-view.css
@@ -20,31 +20,17 @@
  *
  */
 
-body, html {
+ body, html {
   font: 28px;
   font-family: 'Raleway', sans-serif;
   width: 100%;
   height: 100%;
 }
 
-#walkthrough-content {
-    display: none;
-}
-
 .container {
   width: 100%;
   height: 100%;
 }
-
-.emptyclassroom #button_row,
-.emptyclassroom .heading_row,
-.emptyclassroom #link_to_group_view {
-  opacity: 0.1;
-}
-.emptyclassroom #link_to_group_view:hover {
-  background: none;
-}
-
 
 table {
     margin: auto;
@@ -118,7 +104,7 @@ table th.dont_pair_with  {
 }
 
 table th.remove {
-    width: 22%;
+    width: 12%;
     border-top-style: hidden;
     border-left-style: hidden;
     border-right-style: hidden;
@@ -129,10 +115,6 @@ table th.remove {
 /*TABLE ROWS */
 table tr {
     height: 8ex;
-}
-
-.mediumclassroom table tr {
-    height: auto;
 }
 
 /*TABLE CELLS*/
@@ -152,7 +134,7 @@ table td.student_name {
 }
 
 table td.remove {
-    /*width: 12%;*/
+    width: 12%;
     font-size:18px;
     vertical-align: middle;
     text-align: center;
@@ -177,16 +159,10 @@ table td.remove:hover {
     cursor: pointer;
 }
 
-table .remove:before {
+table td.remove:before {
     font-family: FontAwesome;
     font-size: 18px;
     content: '\f014';
-}
-
-table th.remove {
-    color: gainsboro;
-    font-weight: normal;
-    padding: 7px 8px 0 8px;
 }
 
 /*TILES */
@@ -234,31 +210,19 @@ table td p span:hover {
 }
 
 .tile_name:nth-of-type(1) {
+    height: 90%;
     width: 90%;
+    max-height: 40px;
     max-width: 300px;
     line-height: 30px;
     background: #60BADF;
-    height: 40px;
+    min-height: 40px;
     font-size: 20px;
     vertical-align: middle;
     text-align: center;
     box-sizing: border-box;
 }
 
-.largeclassroom .tile_name:nth-of-type(1),
-.largeclassroom table td p {
-    height: 25px;
-    font-size: medium;
-    line-height: 1;
-    box-sizing: border-box;
-    vertical-align: middle;
-}
-.largeclassroom table td p span {
-    font-size: 90%;
-}
-.largeclassroom table td {
-    padding: 0 2px;
-}
 
 .tile_name:hover, .tile_name:nth-of-type(2) {
     box-shadow: 0 3px 11px #939085;
@@ -305,7 +269,7 @@ table td p span:after {
     border-radius: 10px;
 }
 
-#add_student_box {
+table th textarea {
     display:inline-block;
     /* text-align: center; */
     /* vertical-align: middle; */
@@ -315,10 +279,6 @@ table td p span:after {
     font: 18px Raleway;
     height: 5em;
     resize: none;
-}
-
-.emptyclassroom #add_student_box {
-    height: 20em;
 }
 
 /* Make the textarea larger when it's the only thing. */
@@ -579,7 +539,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       outline: none;
       padding: 3px 0px 3px 3px;
       margin: 5px 1px 3px 0px;
-      border: 3px solid #BCBAB4;
+      border: 3px dashed #BCBAB4;
       vertical-align: middle;
   }
 
@@ -601,7 +561,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       /*border: 3px solid #CC99FF;*/
       border: none;
       box-shadow: 0 0 5px #BCBAB4;
-      background: white;
+      background: #f9efec;
       position: relative;
   }
 
