Re-apply changes from yesterday.

--- a/src/table-view.css
+++ b/src/table-view.css
@@ -20,17 +20,31 @@
  *
  */
 
- body, html {
+body, html {
   font: 28px;
   font-family: 'Raleway', sans-serif;
   width: 100%;
   height: 100%;
 }
 
+#walkthrough-content {
+    display: none;
+}
+
 .container {
   width: 100%;
   height: 100%;
 }
+
+.emptyclassroom #button_row,
+.emptyclassroom .heading_row,
+.emptyclassroom #link_to_group_view {
+  opacity: 0.1;
+}
+.emptyclassroom #link_to_group_view:hover {
+  background: none;
+}
+
 
 table {
     margin: auto;
@@ -104,7 +118,7 @@ table th.dont_pair_with  {
 }
 
 table th.remove {
-    width: 12%;
+    width: 22%;
     border-top-style: hidden;
     border-left-style: hidden;
     border-right-style: hidden;
@@ -115,6 +129,10 @@ table th.remove {
 /*TABLE ROWS */
 table tr {
     height: 8ex;
+}
+
+.mediumclassroom table tr {
+    height: auto;
 }
 
 /*TABLE CELLS*/
@@ -134,7 +152,7 @@ table td.student_name {
 }
 
 table td.remove {
-    width: 12%;
+    /*width: 12%;*/
     font-size:18px;
     vertical-align: middle;
     text-align: center;
@@ -159,10 +177,16 @@ table td.remove:hover {
     cursor: pointer;
 }
 
-table td.remove:before {
+table .remove:before {
     font-family: FontAwesome;
     font-size: 18px;
     content: '\f014';
+}
+
+table th.remove {
+    color: gainsboro;
+    font-weight: normal;
+    padding: 7px 8px 0 8px;
 }
 
 /*TILES */
@@ -210,19 +234,31 @@ table td p span:hover {
 }
 
 .tile_name:nth-of-type(1) {
-    height: 90%;
     width: 90%;
-    max-height: 40px;
     max-width: 300px;
     line-height: 30px;
     background: #60BADF;
-    min-height: 40px;
+    height: 40px;
     font-size: 20px;
     vertical-align: middle;
     text-align: center;
     box-sizing: border-box;
 }
 
+.largeclassroom .tile_name:nth-of-type(1),
+.largeclassroom table td p {
+    height: 25px;
+    font-size: medium;
+    line-height: 1;
+    box-sizing: border-box;
+    vertical-align: middle;
+}
+.largeclassroom table td p span {
+    font-size: 90%;
+}
+.largeclassroom table td {
+    padding: 0 2px;
+}
 
 .tile_name:hover, .tile_name:nth-of-type(2) {
     box-shadow: 0 3px 11px #939085;
@@ -269,7 +305,7 @@ table td p span:after {
     border-radius: 10px;
 }
 
-table th textarea {
+#add_student_box {
     display:inline-block;
     /* text-align: center; */
     /* vertical-align: middle; */
@@ -279,6 +315,10 @@ table th textarea {
     font: 18px Raleway;
     height: 5em;
     resize: none;
+}
+
+.emptyclassroom #add_student_box {
+    height: 20em;
 }
 
 /* Make the textarea larger when it's the only thing. */
@@ -539,7 +579,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       outline: none;
       padding: 3px 0px 3px 3px;
       margin: 5px 1px 3px 0px;
-      border: 3px dashed #BCBAB4;
+      border: 3px solid #BCBAB4;
       vertical-align: middle;
   }
 
@@ -561,7 +601,7 @@ input[type=number]::-webkit-inner-spin-button:focus  input[type=number]::-webkit
       /*border: 3px solid #CC99FF;*/
       border: none;
       box-shadow: 0 0 5px #BCBAB4;
-      background: #f9efec;
+      background: white;
       position: relative;
   }
 
