--- a/src/table-view.css
+++ b/src/table-view.css
@@ -36,6 +36,12 @@ body, html {
   height: 100%;
 }
 
+#help_button {
+    position: fixed;
+    bottom: 0px
+
+}
+
 .emptyclassroom #button_row,
 .emptyclassroom .heading_row,
 .emptyclassroom #link_to_group_view {
