--- a/src/group-view.css
+++ b/src/group-view.css
@@ -63,6 +63,10 @@ svg line.link.clustersel {
  stroke: #DFDDE7;
 }
 
+svg line.link.pinnedCluster {
+  stroke: #80d85f;
+}
+
 svg line.join {
  stroke: #DBD8D3;
  stroke-width: 75px;
