Line up fonts and spacing in sidebar items.

--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -194,6 +194,7 @@ body{
 }
 #teachermode_text {
   padding-right: 5%;
+  padding-left: 20px;
 }
 #cssmenu ul li:hover > ul {
   visibility: visible;
