--- a/src/table-view.css
+++ b/src/table-view.css
@@ -374,6 +374,7 @@ table td p span:after {
     padding: 20px;
     border-radius: 10px;
     width: 100%;
+    box-sizing: border-box;
     font: 18px Raleway;
     height: 5em;
     resize: none;
